@@ -3,6 +3,7 @@
 
 div#accountlist { max-height:640px; overflow:auto; }
 tr.missing td, tr.missing td a { color: #998; }
+fieldset.collapsed { border-width: 0; padding: 0 0.5em; }
 
 /* styles for account details admin page */
 
